Fixing tables, aligning buttons to $ci_scale

--- a/app/assets/stylesheets/application/_buttons.css.scss
+++ b/app/assets/stylesheets/application/_buttons.css.scss
@@ -42,7 +42,7 @@ button {
   }
 
   &.button-small {
-    font-size: .8em;
+    font-size: $ci_small-font;
   }
 }
 
